--- a/requirements.txt
+++ b/requirements.txt
@@ -1,77 +1,11 @@
-asgiref==3.5.0
-astroid==2.9.3
-attrs==21.4.0
-black==22.1.0
-boto3==1.21.9
-botocore==1.24.9
-CacheControl==0.12.10
-cachy==0.3.0
-certifi==2021.10.8
-charset-normalizer==2.0.12
-cleo==0.8.1
 click==8.0.4
-clikit==0.6.2
-crashtest==0.3.1
-cycler==0.11.0
-distlib==0.3.4
-Django==4.0.3
-filelock==3.6.0
-Flask==2.1.2
-fonttools==4.29.1
-html5lib==1.1
-idna==3.3
-importlib-metadata==4.11.2
-iniconfig==1.1.1
-isort==5.10.1
-itsdangerous==2.1.2
-Jinja2==3.1.2
-jmespath==0.10.0
-keyring==23.5.0
-kiwisolver==1.3.2
-lazy-object-proxy==1.7.1
-lockfile==0.12.2
-MarkupSafe==2.1.1
-matplotlib==3.5.1
-mccabe==0.6.1
-mpmath==1.2.1
-msgpack==1.0.3
-mypy-extensions==0.4.3
-nose==1.3.7
-numpy==1.22.3
-packaging==20.9
-pandas==1.4.1
-pastel==0.2.1
-pathspec==0.9.0
-pexpect==4.8.0
-Pillow==9.0.1
-pkginfo==1.8.2
-platformdirs==2.5.1
-pluggy==1.0.0
-poetry==1.1.13
-poetry-core==1.0.8
-ptyprocess==0.7.0
-py==1.11.0
-pybind11==2.9.1
-pylev==1.4.0
-pyparsing==3.0.7
-pytest==7.1.2
-python-dateutil==2.8.2
-pytz==2021.3
-requests==2.27.1
-requests-toolbelt==0.9.1
-s3transfer==0.5.2
-scipy==1.8.0
-shellingham==1.4.0
-six==1.16.0
-sqlparse==0.4.2
-sympy==1.9
-toml==0.10.2
-tomli==2.0.1
-tomlkit==0.10.0
-typing_extensions==4.1.1
-urllib3==1.26.8
-virtualenv==20.13.2
-webencodings==0.5.1
-Werkzeug==2.1.2
-wrapt==1.13.3
-zipp==3.7.0
+dataclasses==0.8
+Flask==2.0.3
+importlib-metadata==4.8.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+pkg-resources==0.0.0
+typing-extensions==4.1.1
+Werkzeug==2.0.3
+zipp==3.6.0
